# typing_game

./: .gitignore  CMakeLists.txt  main.cpp
.cache/clangd/index/: event_handler.cpp.1DAEC439DD63084D.idx  event_handler.hpp.1DA054C852D8E189.idx  game.cpp.0DEFE48D5233AC26.idx  game.hpp.37BA631781CA6EB6.idx  input.cpp.9EE6A546409B32D4.idx  input.hpp.FDD516BEA66F01AA.idx  main.cpp.9399C4AE2284589A.idx  paragraph.cpp.769D2A744AFD0FE6.idx  paragraph.hpp.F01469D0F2748939.idx  program_options.cpp.F10CDE067C611222.idx  program_options.hpp.F24D8969C49A8A40.idx  renderer.cpp.0799AA5AFDA6A025.idx  renderer.hpp.D2B86786D53E053C.idx  smart_pointer_wrapper.cpp.725BEAD3BAFD18CF.idx  smart_pointer_wrapper.hpp.7C901FB8E881BC7E.idx
lib_imgui/: CMakeLists.txt
typing_game/: CMakeLists.txt  game.cpp  game.hpp  gui.cpp  gui.hpp  main.cpp  main.hpp
typing_game/game/: CMakeLists.txt  game.cpp  game.hpp
typing_game/lib_imgui/: CMakeLists.txt  imgui_impl_sdl2.cpp
typing_game/renderer/: CMakeLists.txt  renderer.cpp  renderer.hpp
typing_game/src/: CMakeLists.txt  main.cpp
typing_game/tools/: CMakeLists.txt  event_handler.cpp  event_handler.hpp  paragraph.cpp  paragraph.hpp  program_options.cpp  program_options.hpp  smart_pointer_wrapper.cpp  smart_pointer_wrapper.hpp
